apps/base/excalidraw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
  labels:
    app: excalidraw
